# lark-google-calencar-sync

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/cal_sync/: __init__.py  cli.py  config.py  google_calendar.py  lark_caldav.py  logging_config.py  models.py  runtime.py  sync.py  tui.py
tests/: test_cli.py  test_config.py  test_google_calendar.py  test_lark_caldav.py  test_logging_config.py  test_runtime.py  test_sync_plan.py  test_tui.py
