[project]
name = "lark-google-calendar-sync"
version = "0.1.0"
description = "One-way sync from Lark CalDAV calendar to Google Calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caldav>=2.0.1",
    "google-api-python-client>=2.173.0",
    "google-auth-oauthlib>=1.2.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "python-dateutil>=2.9.0.post0",
    "rich>=14.0.0",
    "textual>=3.5.0",
    "tomli-w>=1.2.0",
    "typer>=0.16.0",
    "vobject>=0.9.9",
]

[project.scripts]
lark-gcal = "cal_sync.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cal_sync"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
